--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,31 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
-[project]
+[tool.poetry]
 name = "llm-cli"
 version = "0.0.1"
 description = "Small cli for llms"
+packages = [{include = "llm-cli"}]
+license = "GNU GPLv3"
+readme = "README.md"
+authors = ["krenzaslv"]
 
-dependencies = [
-  'typer',
-  'llama-cpp-python',
-]
+[tool.poetry.dependencies]
+python = ">3.9, < 3.12" #torch not available for 3.12 as of now
+typer = "^0.9.0"
+huggingface-hub = "^0.19.4"
+llama-cpp-python = "^0.2.20"
 
-[project.optional-dependencies]
-develop = [
-  "ruff",
-  "ruff-lsp",
-]
+[tool.poetry.group.develop]
+optional = true
+[tool.poetry.group.develop.dependencies]
+ruff-lsp = "^0.0.45"
+pyright = "^1.1.339"
+ruff = "^0.1.7"
 
-[project.scripts]
-llm-cli = "llmcli.main:main"
+[tool.poetry.scripts]
+llm-cli = "llm-cli.main:main"
 
 [tool.ruff]
 line-length=200
